# loco_link_shortener

./: .env.example  .prettierignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yaml  ci.yml
assets/views/home/: hello.html
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: App.svelte  app.scss
frontend/src/lib/: DefaultLinkImage.svelte  InputShorten.svelte  LinkCard.svelte  LinksView.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_links.rs
src/: app.rs  lib.rs  utils.rs
src/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  dockerfile  nixpacks.toml
src/backend/.cargo/: config.toml
src/backend/assets/i18n/de-DE/: main.ftl
src/backend/assets/i18n/en-US/: main.ftl
src/backend/assets/static/: 404.html
src/backend/config/: development.yaml  production.yaml  test.yaml
src/backend/examples/: playground.rs
src/backend/migration/: Cargo.toml
src/backend/migration/src/: lib.rs  m20220101_000001_create_table.rs
src/backend/src/: app.rs  lib.rs
src/backend/src/common/: settings.rs
src/backend/src/controllers/: healthcheck.rs  mod.rs  retrieve.rs  system_info.rs  utils.rs
src/backend/src/controllers/api/: add.rs  delete.rs  edit.rs  info.rs  list.rs  mod.rs
src/backend/src/controllers/custom_headers/: mod.rs  x_envoy_external_address.rs
src/backend/src/controllers/oauth2/: mod.rs  protected.rs
src/backend/src/controllers/validations/: custom.rs  mod.rs  url.rs
src/backend/src/initializers/: axum_session.rs  cors_layer.rs  ip_getter.rs  mod.rs  oauth2.rs
src/backend/src/models/: mod.rs
src/backend/src/models/_entities/: clicks.rs  links.rs  mod.rs  prelude.rs
src/backend/src/models/clicks/: info.rs
src/backend/src/models/links/: add.rs  delete.rs  edit.rs  find.rs  list.rs  mod.rs  update_with_image.rs
src/backend/src/models/o_auth2_sessions/: mod.rs
src/backend/src/models/users/: mod.rs
src/backend/src/views/: link_view.rs  mod.rs
src/backend/src/workers/: image_getter.rs  mod.rs
src/common/: settings.rs
src/controllers/: mod.rs  retrieve.rs  utils.rs
src/controllers/api/: add.rs  delete.rs  info.rs  list.rs  mod.rs
src/controllers/custom_headers/: mod.rs  x_forwarded_for.rs
src/controllers/oauth2/: protected.rs
src/frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts
src/frontend/src/: app.d.ts  app.html  hooks.server.ts
src/frontend/src/lib/: DefaultLinkImage.svelte  LinkCard.svelte  Navbar.svelte  api.ts  models.ts  utils.ts
src/frontend/src/lib/components/: Footer.svelte  GoogleLogo.svelte  InputShorten.svelte  LinkBrief.svelte  LinkCard.svelte  LinksView.svelte  ListErrors.svelte  Loader.svelte  Navbar.svelte  NavbarItem.svelte  UnderlinedText.svelte  index.ts
src/frontend/src/lib/images/: Axum.svelte  CloudflarePages.svelte  PostgreSQL.svelte  Railway.svelte  Svelte.svelte
src/frontend/src/lib/stores/: auth.ts  screenWidth.ts
src/frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  +page.ts
src/frontend/src/routes/about/: +page.svelte
src/frontend/src/routes/api/add/: +server.ts
src/frontend/src/routes/api/delete/: +server.ts
src/frontend/src/routes/details/[id]/: +page.server.ts  +page.svelte  +page.ts
src/frontend/src/routes/edit/[id]/: +page.server.ts  +page.svelte  +page.ts
src/frontend/src/routes/login/: +page.server.ts  +page.svelte  +page.ts
src/frontend/src/routes/login/callback/: +page.server.ts  +page.svelte  +page.ts
src/frontend/src/scss/: app.scss
src/models/: mod.rs
src/models/_entities/: clicks.rs  links.rs  mod.rs  prelude.rs  users.rs
src/models/clicks/: info.rs
src/models/links/: add.rs  delete.rs  find.rs  info.rs  list.rs  mod.rs  retrieve.rs
src/models/users/: mod.rs
src/views/: link_view.rs
