[workspace]

[package]
name = "loco_link_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.3.2" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.78"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.18.1", features = ["derive"] }
sea-orm = { version = "1.0.0-rc.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }

axum = "0.7.1"
include_dir = "0.7"
uuid = { version = "1.8.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

# view engine i18n
#fluent-templates = { version = "0.9.1", features = ["tera"] }
#unic-langid = "0.9.4"
color-eyre = "0.6.3"
rand = "0.8.5"
thiserror = "1.0.58"
url = { version = "2.5.0", features = ["serde"] }
dotenvy = "0.15.7"
axum-client-ip = "0.6.0"
loco-oauth2 = "0.1.1"
axum_session = "0.13.0"
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
# /view engine

[[bin]]
name = "main"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3.0.0"
rstest = "0.19.0"
loco-rs = { version = "0.4.0", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }

[profile.release]
lto = true
