[workspace]

[package]
name = "loco_link_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.3.2" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.78"
tracing = "0.1.40"
chrono = "0.4"
sea-orm = { version = "1.0.0-rc.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }

axum = { version = "0.7.1", features = ["http2"] }
uuid = { version = "1.8.0", features = ["v4"] }

color-eyre = "0.6.3"
rand = "0.9.0"
thiserror = "2.0.12"
dotenvy = "0.15.7"
axum-client-ip = "0.6.0"
loco-oauth2 = "0.1.1"
axum_session = "0.13.0"
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
witty-phrase-generator = "0.3.0"
webpage = "2.0.1"
regex = "1.10.4"
rustrict = "0.7.25"
sysinfo = { version = "0.34.2", features = ["serde", "system"] }

[[bin]]
name = "main"
path = "src/bin/main.rs"
required-features = []

[profile.release]
lto = true